[package]
name = "tokio-rustls"
version = "0.26.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustls/tokio-rustls"
homepage = "https://github.com/rustls/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2021"
rust-version = "1.71"
exclude = ["/.github", "/examples", "/scripts"]

[dependencies]
rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "wasix-0.23.31", default-features = false, features = ["std"] }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.47.0" }
pki-types = { package = "rustls-pki-types", version = "1" }

[features]
default = ["logging", "tls12", "ring"]
aws_lc_rs = ["rustls/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"] # Alias because Cargo features commonly use `-`
early-data = []
fips = ["rustls/fips"]
logging = ["rustls/logging"]
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]

[dev-dependencies]
argh = "0.1.1"
futures-util = "0.3.1"
lazy_static = "1.1"
rcgen = { version = "0.13", features = ["pem"] }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.47.0" , features = ["full"] }
webpki-roots = "0.26"
